# aether

./: .gitignore  .gitmodules  AGENTS.md  API_REFERENCE_FOR_STRESS_TESTS.md  BACKLOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  build.py  codex_resume.txt  flake.nix  index.html  shell.nix
.github/: copilot-instructions.md
aether-lite/: CMakeLists.txt  aether_lite_config.h  aether_lite_crc.c  aether_lite_crc.h  aether_lite_dispatch.c  aether_lite_dispatch.h  aether_lite_endian.h  aether_lite_fnv1a.h  aether_lite_framing.c  aether_lite_framing.h  aether_lite_hal.h  aether_lite_types.h
bench/: CMakeLists.txt  bench_comparison.cpp  bench_frameio.cpp  bench_notify.cpp  bench_roundtrip.cpp  benchmark_result.json
cmake/: aether.pc.in  aetherConfig.cmake.in
doc/: AdoptionGuide.md  AetherIn5Minutes.md  ClientBase.md  Connection.md  FrameIO.md  Platform.md  README.md  ServiceBase.md  TODO-sdk-packaging.md  aether-hld.md  aether-lld.md  aether-vision.md  architecture-guide.md  architecture.md  dev-journal-phase5-p0.md  dev-journal-phase5-p1.md  idl-cookbook.md  ipcgen-hld.md  ipcgen-lld.md  ms-ipc-hld.md  ms-ipc-lld.md  phase5-runloop-plan.md  platform-port-macos.md  platform-port-windows.md
example/: CMakeLists.txt  CodeGenClientTest.cpp  CodeGenServerTest.cpp  DeviceMonitor.idl  README.md  echo_client.cpp  echo_server.cpp
examples/: CMakeLists.txt  README.md  README_TEMPLATE.md  SerialTransport.h
examples/apps/: CMakeLists.txt
examples/apps/exhaust-analyzer/: README.md  exhaust_client.cpp
examples/c-echo/: CMakeLists.txt  README.md  echo_server.c
examples/echo/: CMakeLists.txt  CodeGenClientTest.cpp  CodeGenServerTest.cpp  DeviceMonitor.idl  README.md  device_monitor_client.cpp  device_monitor_server.cpp  echo_server.cpp
examples/exhaust-analyzer/: CMakeLists.txt  ExhaustAnalyzer.idl  README.md  exhaust_client.cpp  exhaust_server.cpp
examples/getting-started/: CMakeLists.txt
examples/getting-started/c-echo/: CMakeLists.txt  README.md  echo_client.c
examples/getting-started/echo/: CMakeLists.txt  CodeGenClientTest.cpp  CodeGenServerTest.cpp  README.md  device_monitor_client.cpp  echo_client.cpp
examples/getting-started/sdk-usage/: CMakeLists.txt  README.md
examples/linux/: CMakeLists.txt
examples/linux/file-watcher/: CMakeLists.txt  FileWatcher.idl  README.md  filewatcher_device.cpp  filewatcher_test.cpp
examples/linux/gpio-controller/: CMakeLists.txt  GpioController.idl  README.md  gpio_dashboard.cpp  gpio_device.cpp
examples/linux/sensor-hub/: CMakeLists.txt  README.md  sensor_device.cpp
examples/linux/sysmon/: CMakeLists.txt  README.md  SysMon.idl  sysmon_device.cpp
examples/macos/: CMakeLists.txt
examples/macos/audio-dsp/: README.md  dsp_test.cpp
examples/macos/battery-monitor/: BatteryMonitor.idl  README.md  battery_client.cpp  battery_device.cpp
examples/macos/ble-peripheral/: BlePeripheral.idl  CMakeLists.txt  README.md  ble_dashboard.cpp  ble_device.cpp
examples/macos/disk-usage/: README.md  disk_device.cpp  disk_test.cpp
examples/mcu-firmware/: README.md  device_handlers.c  device_handlers.h  main.c
examples/platform/: CMakeLists.txt
examples/platform/linux/: CMakeLists.txt
examples/platform/linux/file-watcher/: CMakeLists.txt  README.md  filewatcher_client.cpp
examples/platform/linux/gpio-controller/: CMakeLists.txt  README.md  gpio_test.cpp
examples/platform/linux/sensor-hub/: CMakeLists.txt  README.md  SensorHub.idl  sensor_dashboard.cpp  sensor_test.cpp
examples/platform/linux/sysmon/: CMakeLists.txt  README.md  sysmon_client.cpp  sysmon_test.cpp
examples/platform/macos/: CMakeLists.txt
examples/platform/macos/audio-dsp/: AudioDsp.idl  CMakeLists.txt  README.md  dsp_dashboard.cpp  dsp_device.cpp
examples/platform/macos/battery-monitor/: CMakeLists.txt  README.md  battery_test.cpp
examples/platform/macos/ble-peripheral/: CMakeLists.txt  README.md  ble_device.cpp  ble_test.cpp
examples/platform/macos/disk-usage/: CMakeLists.txt  DiskUsage.idl  README.md  disk_client.cpp
examples/platform/windows/can-bus-ecu/: CMakeLists.txt  README.md  ecu_dashboard.cpp  ecu_device.cpp
examples/platform/windows/motor-controller/: CMakeLists.txt  README.md  motor_test.cpp
examples/platform/windows/process-monitor/: CMakeLists.txt  ProcessMonitor.idl  README.md  procmon_test.cpp
examples/platform/windows/service-status/: CMakeLists.txt  README.md  svcstat_test.cpp
examples/sdk-usage/: CMakeLists.txt  README.md  TemperatureSensor.idl  protocol.h  temp_client.cpp  temp_server.cpp
examples/serial-loopback/: CMakeLists.txt  README.md  SerialTransport.h  serial_loopback.cpp
examples/serial-sensor/: CMakeLists.txt  README.md  SerialTransport.h  serial_sensor.cpp
examples/transports/: CMakeLists.txt
examples/transports/mcu-firmware/: README.md  device_handlers.c
examples/transports/serial-loopback/: CMakeLists.txt  README.md
examples/transports/serial-sensor/: CMakeLists.txt  README.md  sensor_device.c  sensor_device.h
examples/windows/: CMakeLists.txt
examples/windows/can-bus-ecu/: CanBusEcu.idl  README.md  ecu_device.cpp  ecu_test.cpp
examples/windows/motor-controller/: CMakeLists.txt  MotorController.idl  README.md  motor_dashboard.cpp  motor_device.cpp  motor_test.cpp
examples/windows/process-monitor/: CMakeLists.txt  README.md  procmon_client.cpp  procmon_device.cpp
examples/windows/service-status/: CMakeLists.txt  README.md  ServiceStatus.idl  svcstat_client.cpp  svcstat_device.cpp
inc/: ClientBase.h  Connection.h  Endian.h  (+8 more)
test/: AetherLiteTest.cpp  CApiTest.cpp  CMakeLists.txt  ClientBaseTest.cpp  ConnectionTest.cpp  EndianTest.cpp  FrameIOTest.cpp  PlatformTest.cpp  PlatformWindowsTest.cpp  README.md  ServiceBaseTest.cpp  TransportClientBaseTest.cpp
test/fuzz/: CMakeLists.txt  fuzz_aether_lite.cpp  fuzz_frameio.cpp
test/fuzz/corpus/aether_lite/: bad_crc  bad_sync  handshake_hello  sync_in_payload  two_frames  valid_empty  valid_request
test/fuzz/corpus/frameio/: oversized_payload  valid_notify  valid_request_no_payload  valid_request_with_payload  valid_response
(+57 files in other folders)
